--- a/LoginPage.html
+++ b/LoginPage.html
@@ -22,14 +22,21 @@
         </nav>
 
 
-        <div class="LoginPart " id="RegistrationForm">
-            <div class="SignInLogo"><img src="Images/SignInLogo.png" alt=""></div>
-           <div class="InputField">
-              <input id="UserName" type="text" placeholder="User name">
-              <input id="Password" type="password" placeholder="Password">
+        <div class="Login-Welcome">
+            <div class="LoginPart " id="RegistrationForm">
+                <div class="SignInLogo"><img src="Images/SignInLogo.png" alt=""></div>
+               <div class="InputField">
+                  <input id="UserName" type="text" placeholder="User name">
+                  <input id="Password" type="password" placeholder="Password">
+               </div>
+                <div class="SignInButton"><button>Sign in</button></div>
            </div>
-            <div class="SignInButton"><button>Sign in</button></div>
-       </div>
+    
+           <div class="WelcomePart">
+            <h1>Welcome</h1>
+            <p>The Anti-Corruption Cell platform enables citizens to anonymously report corruption, while our team verifies and investigates complaints. By collaborating with authorities, we ensure transparency and accountability in tackling corruption.</p>
+           </div>
+        </div>
 
     </div>
     
