--- a/LoginPage.html
+++ b/LoginPage.html
@@ -10,13 +10,16 @@
 
     <div class="LoginDiv">
         <nav>
-            <h1>Anti-Corruption Cell</h1>
+            <div class="PLogo-PName">
+                <img src="Images/Sign_In_Logo.png" alt="">
+                <h1>Anti-Corruption Cell</h1>
+            </div>
           
                 <ul>
                     <li><a href="">Instruction</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact us</a></li>
-                    <li><button>Registration</button></li>
+                    <li><button onclick="RegistrationFormOpen()">Registration</button></li>
                 </ul>
           
         </nav>
@@ -24,7 +27,7 @@
 
         <div class="Login-Welcome">
             <div class="LoginPart " id="RegistrationForm">
-                <div class="SignInLogo"><img src="Images/SignInLogo.png" alt=""></div>
+                <div class="SignInLogo"><img src="Images/Sign_In_Logo.png" alt=""></div>
                <div class="InputField">
                   <input id="UserName" type="text" placeholder="User name">
                   <input id="Password" type="password" placeholder="Password">
@@ -36,6 +39,18 @@
             <h1>Welcome</h1>
             <p>The Anti-Corruption Cell platform enables citizens to anonymously report corruption, while our team verifies and investigates complaints. By collaborating with authorities, we ensure transparency and accountability in tackling corruption.</p>
            </div>
+        </div>
+
+
+        <div class="RegistrationForm DisplayHidden" id="RegForm">
+            <div class="PLogo"><img src="Images/Sign_In_Logo.png" alt=""></div>
+            <div class="Reg-InputField">
+                <input type="text" placeholder="Your name">
+                <input type="text" placeholder="Your NID">
+                <input type="text" placeholder="Your Phone number (According to NID)">
+            </div>
+            <div class="Reg-Confirm"><button>Confirm</button></div>
+            <button id="Reg-Cancel" onclick="RegistrationCancel()">Cancel</button>
         </div>
 
     </div>
