--- a/LoginPage.html
+++ b/LoginPage.html
@@ -16,10 +16,13 @@
             </div>
           
                 <ul>
+                    <div id="MenuBar"><button onclick="OpenMenuOptions()"><img src="" alt=""></button></div>
+                    <div id="MenuOptions">
                     <li><a href="">Instruction</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact us</a></li>
                     <li><button onclick="RegistrationFormOpen()">Registration</button></li>
+                    </div>
                 </ul>
           
         </nav>
