--- a/LoginPage.html
+++ b/LoginPage.html
@@ -18,8 +18,12 @@
         <div class="MenuOptions">
             <ul>
                 <div class="Language">
-                    <img src="" alt="">
-                    <button>Language</button>
+                    <!-- <img src="" alt=""> -->
+                    <button class="DropDownButton">Language</button>
+                    <div class="DropDownContent">
+                        <a href="">English</a>
+                        <a href="">Bangla</a>
+                    </div>
                 </div>
                 <li><a href="">Instruction</a></li>
                 <li><a href="">About</a></li>
