--- a/LoginPage.html
+++ b/LoginPage.html
@@ -21,10 +21,10 @@
             <h1>Anti-Corruption Cell</h1> -->
         </div>
 
-        <ul class="Menu">
+        <ul class="Menu" id="menu">
             <div class="LanguageImage" id="LanguageImage"><img src="Images/LanguageIcon-removebg-preview.png" alt=""></div>
-            <li><button class="LanguageButton">Language<span>&#9662;</span></button>
-                <div class="DropDownContent">
+            <li><button onclick="ToggleLanguage()" class="LanguageButton">Language<span>&#9662;</span></button>
+                <div class="DropDownContent" id="DropDownContent">
                     <a href="">English</a>
                     <a href="">Bangla</a>
                 </div>
