--- a/Registration.html
+++ b/Registration.html
@@ -69,6 +69,10 @@
     float: right;
     margin-right: 20px;
 }
+#Reg-Cancel a{
+    color: white;
+    text-decoration: none;
+}
 
     </style>
 </head>
@@ -81,7 +85,7 @@
             <input type="text" placeholder="Phone number (According to NID)">
         </div>
         <div class="Reg-Confirm"><button>Confirm</button></div>
-        <button id="Reg-Cancel" onclick="RegistrationCancel()">Close</button>
+        <button id="Reg-Cancel"><a href="InitialPage.html">Close</a></button>
     </div>
 </body>
 </html>
