--- a/Extra.html
+++ b/Extra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="LoginPage.css">
+    <link rel="stylesheet" href="Extra.css">
 </head>
 <body>  
 
@@ -71,6 +71,6 @@
 
    </main>
 
-   <script src="LoginPage.js"></script>    
+   <script src="Extra.js"></script>    
 </body>
 </html>
