--- a/LoginPage.html
+++ b/LoginPage.html
@@ -87,6 +87,6 @@ body{
             <div class="SignInButton"><button>Sign in</button></div>
        </div>
     </div>
-
+<script src="MainPage.js"></script>
 </body>
 </html>
