--- a/MainPage.html
+++ b/MainPage.html
@@ -49,7 +49,7 @@
     </div>
     </div>
 
-    <button onclick="CreateComplain()">click</button>
+    <button style="background-color: blue; color: white; height: 40px; width: 50px;" onclick="CreateComplain()">click</button>
   <script src="MainPage.js"></script>  
 </body>
 </html>
